--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -28,7 +28,7 @@
                 <form class="form col-md-12 center-block" action="{% url 'login' %}" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <input type="text" class="form-control input-lg" placeholder="Email" name="email">
+                        <input type="text" class="form-control input-lg" placeholder="Username" name="username">
                     </div>
                     <div class="form-group">
                         <input type="password" class="form-control input-lg" placeholder="Password" name="password">
