--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -37,32 +37,40 @@
             </div>
             <div class="form-group">
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" placeholder="username" name="username">
+                  <input class="form-control" placeholder="First Name" name="first_name" type={{ form.first_name }}
+                </div>
+                <div class="col-sm-10">
+                  <input class="form-control" placeholder="Last name" name="last_name" type={{ form.last_name }}
+                </div>
+                <div class="col-sm-10">
+                  <input class="form-control" placeholder="username" name="username" type={{ form.username }}
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-10">
-                  <input type="email" class="form-control" placeholder="Email" name="email">
+                  <input class="form-control" placeholder="Email" name="email" type={{ form.email }}
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" placeholder="Password" name="password">
+                  <input class="form-control" placeholder="Password" name="password1" type={{ form.password1 }}
                 </div>
               </div>
               <div class="form-group">
                 <div class="col-sm-10">
-                  <input type="password" class="form-control" placeholder="Confirm Password" name="confirm_password">
+                  <input class="form-control" placeholder="Confirm Password" name="password2" type={{ form.password2 }}
                 </div>
+
               </div>
               <div class="form-group">
                 <div class="col-sm-10">
                   <button type="submit" class="btn btn-info">
-                    <span class="glyphicon glyphicon-share-alt"></span>
-                    Register
+                    <span class="glyphicon glyphicon-share-alt">Register</span>
                   </button>
                 </div>
+
               </div>
+                  {{ form.errors }}
         </form>
     </div>
   </div>
