--- a/templates/app/shop.html
+++ b/templates/app/shop.html
@@ -3915,7 +3915,7 @@ h1.thank-you {
 		<!-- lightbox css -->
         <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 		<!-- style css -->
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="../../app/static/style.css">
 		<!-- responsive css -->
         <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
 		<!-- modernizr css -->
