--- a/templates/app/contact.html
+++ b/templates/app/contact.html
@@ -3975,14 +3975,14 @@ h1.thank-you {
 					<div class="row">
 						<div class="col-md-2 col-sm-6 col-xs-12">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo.png" alt="" /></a>
+								<a href="{% url 'index' %}"><img src="{% static 'img/logo.png' %}" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-md-8 hidden-sm hidden-xs">
 							<div class="main-menu pull-right">
 								<nav>
 									<ul>
-										<li><a href="index.html">home</a>
+										<li><a href="{% url 'index' %}">home</a>
 											<ul class="submenu">
 												<li class="submenu-title"><a href="#">Home pages</a></li>
 												<li><a href="index.html">Homepage Version 1</a></li>
@@ -4021,7 +4021,7 @@ h1.thank-you {
 													<a href="#">drop earrings</a>
 												</span>
 												<span class="mega-menu-photo">
-													<a href="#"><img src="img/megamenu/1.jpg" alt="" /></a>
+													<a href="#"><img src="{% static 'img/megamenu/1.jpg' %}" alt="" /></a>
 												</span>
 											</div>
 										</li>
@@ -4068,7 +4068,7 @@ h1.thank-you {
 										<div class="total-cart-brief">
 											<div class="cart-photo-details">
 												<div class="cart-photo">
-													<a href="#"><img src="img/total-cart/1.jpg" alt="" /></a>
+													<a href="#"><img src="{% static 'img/total-cart/1.jpg' %}" alt="" /></a>
 												</div>
 												<div class="cart-photo-brief">
 													<a href="#">Men's Shirt Shirt</a>
@@ -4080,7 +4080,7 @@ h1.thank-you {
 											</div>
 											<div class="cart-photo-details">
 												<div class="cart-photo">
-													<a href="#"><img src="img/total-cart/1.jpg" alt="" /></a>
+													<a href="#"><img src="{% static 'img/total-cart/1.jpg' %}" alt="" /></a>
 												</div>
 												<div class="cart-photo-brief">
 													<a href="#">Men's Shirt Shirt</a>
@@ -4203,7 +4203,7 @@ h1.thank-you {
 									<div class="single-product">
 										<div class="product-photo">
 											<a href="#">
-												<img class="primary-photo" src="img/sidebar/1.png" alt=""/> 
+												<img class="primary-photo" src="{% static 'img/sidebar/1.png' %}" alt=""/>
 											</a>
 										</div>
 										<div class="product-brief">
@@ -4216,7 +4216,7 @@ h1.thank-you {
 									<div class="single-product">
 										<div class="product-photo">
 											<a href="#">
-												<img class="primary-photo" src="img/sidebar/2.png" alt=""/> 
+												<img class="primary-photo" src="{% static 'img/sidebar/2.png' %}" alt=""/>
 											</a>
 										</div>
 										<div class="product-brief">
@@ -4229,7 +4229,7 @@ h1.thank-you {
 									<div class="single-product">
 										<div class="product-photo">
 											<a href="#">
-												<img class="primary-photo" src="img/sidebar/3.png" alt=""/> 
+												<img class="primary-photo" src="{% static 'img/sidebar/3.png' %}" alt=""/>
 											</a>
 										</div>
 										<div class="product-brief">
@@ -4242,7 +4242,7 @@ h1.thank-you {
 									<div class="single-product">
 										<div class="product-photo">
 											<a href="#">
-												<img class="primary-photo" src="img/sidebar/4.png" alt=""/> 
+												<img class="primary-photo" src="{% static 'img/sidebar/4.png' %}" alt=""/>
 											</a>
 										</div>
 										<div class="product-brief">
@@ -4255,7 +4255,7 @@ h1.thank-you {
 									<div class="single-product">
 										<div class="product-photo">
 											<a href="#">
-												<img class="primary-photo" src="img/sidebar/5.png" alt=""/> 
+												<img class="primary-photo" src="{% static 'img/sidebar/5.png' %}" alt=""/>
 											</a>
 										</div>
 										<div class="product-brief">
@@ -4269,7 +4269,7 @@ h1.thank-you {
 							<!-- widget-top-brand end -->
 							<!-- widget sidebar-banner start -->
 							<aside class="widget sidebar-banner">
-								<a href="#"><img src="img/banner/sidebar-1.jpg" alt="" /></a>
+								<a href="#"><img src="{% static 'img/banner/sidebar-1.jpg' %}" alt="" /></a>
 							</aside>
 							<!-- widget sidebar-banner start -->
 						</div>	
@@ -4342,22 +4342,22 @@ h1.thank-you {
 						<div class="col-md-7 col-sm-12">
 							<div class="brand-logo fix">
 								<div class="single-logo">
-									<img src="img/brand/1.png" alt="" />
+									<img src="{% static 'img/brand/1.png' %}" alt="" />
 								</div>
 								<div class="single-logo">
-									<img src="img/brand/2.png" alt="" />
+									<img src="{% static 'img/brand/2.png' %}" alt="" />
 								</div>
 								<div class="single-logo">
-									<img src="img/brand/3.png" alt="" />
+									<img src="{% static 'img/brand/3.png' %}" alt="" />
 								</div>
 								<div class="single-logo">
-									<img src="img/brand/4.png" alt="" />
+									<img src="{% static 'img/brand/4.png' %}" alt="" />
 								</div>
 								<div class="single-logo">
-									<img src="img/brand/5.png" alt="" />
+									<img src="{% static 'img/brand/5.png' %}" alt="" />
 								</div>
 								<div class="single-logo">
-									<img src="img/brand/6.png" alt="" />
+									<img src="{% static 'img/brand/6.png' %}" alt="" />
 								</div>
 							</div>
 						</div>
@@ -4376,7 +4376,7 @@ h1.thank-you {
 						<div class="row">
 							<div class="col-md-4 col-sm-4 col-xs-12">
 								<div class="single-footer footer-logo">
-									<img src="img/logo.png" alt="" />
+									<img src="{% static 'img/logo.png' %}" alt="" />
 									<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
 								</div>
 							</div>
