--- a/templates/app/shop.html
+++ b/templates/app/shop.html
@@ -3976,7 +3976,7 @@ h1.thank-you {
 					<div class="row">
 						<div class="col-md-2 col-sm-6 col-xs-12">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo.png" alt="" /></a>
+								<a href="index.html"><img src="{% static 'img/logo.png' %}" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-md-8 hidden-sm hidden-xs">
