--- a/templates/app/contact.html
+++ b/templates/app/contact.html
@@ -3936,11 +3936,11 @@ h1.thank-you {
 								<ul>
 									<li>
 										<i class="sp-phone"></i>
-										<span>+019 (111) 25184203</span>
+										<span>+998 97 025 10 73</span>
 									</li>
 									<li>
 										<i class="sp-email"></i>
-										<span>Company@domain.com</span>
+										<span>ITcity@gmail.com</span>
 									</li>
 								</ul>
 							</div>
@@ -3950,10 +3950,9 @@ h1.thank-you {
 								<ul>
 									<li><a href="#">Account <span><i class="sp-gear"></i></span></a>
 										<ul class="submenu">
-											<li><a href="#">My Account</a></li>
-											<li><a href="#">Wishlist</a></li>
-											<li><a href="#">Checkout</a></li>
-											<li><a href="#">Login</a></li>
+
+											<li><a href="{% url 'register' %}">Register</a></li>
+											<li><a href="{% url 'login' %}">Login</a></li>
 										</ul>
 									</li>
 								</ul>
@@ -3982,124 +3981,27 @@ h1.thank-you {
 							<div class="main-menu pull-right">
 								<nav>
 									<ul>
-										<li><a href="{% url 'index' %}">home</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Home pages</a></li>
-												<li><a href="index.html">Homepage Version 1</a></li>
-												<li><a href="index-2.html">Homepage Version 2</a></li>
-											</ul>
-										</li>
-										<li><a href="shop.html">mens</a></li>
-										<li><a href="shop-list.html">womens</a></li>
-										<li><a href="shop.html">shop</a>
-											<div class="mega-menu">
-												<span>
-													<a class="mega-menu-title" href="#">WOMEN CLOTH</a>
-													<a href="#">casual shirt</a>
-													<a href="#">rikke t-shirt</a>
-													<a href="#">mia top</a>
-													<a href="#">mia top</a>
-													<a href="#">muscle tee</a>
-													<a href="#">seine blouse</a>
-												</span>
-												<span>
-													<a class="mega-menu-title" href="#">MEN CLOTH</a>
-													<a href="#">casual shirt</a>
-													<a href="#">t-shirt</a>
-													<a href="#">t-shirt</a>
-													<a href="#">zeans</a>
-													<a href="#">trousers/ pants </a>
-													<a href="#">sweamwear</a>
-												</span>
-												<span>
-													<a class="mega-menu-title" href="#">WOMEN JEWELRY</a>
-													<a href="#">necklace</a>
-													<a href="#">samhar cuff</a>
-													<a href="#">samhar cuff</a>
-													<a href="#">samhar cuff</a>
-													<a href="#">nail set</a>
-													<a href="#">drop earrings</a>
-												</span>
-												<span class="mega-menu-photo">
-													<a href="#"><img src="{% static 'img/megamenu/1.jpg' %}" alt="" /></a>
-												</span>
-											</div>
-										</li>
-										<li><a href="blog.html">blog</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Blog pages</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-blog</a></li>
-											</ul>
-										</li><!-- 
+										<li><a href="{% url 'index' %}">home</a></li>
+										<li><a href="{% url 'men' %}">mens</a></li>
+										<li><a href="{% url 'women' %}">womens</a></li>
+										<li><a href="{% url 'shop' %}">shop</a></li>
+                                        <li><a href="{% url 'create_product' %}">Create Product</a></li>
+										<!--
 										<li><a href="about.html">about</a></li> -->
 										<li><a href="#">Pages</a>
 											<ul class="submenu">
 												<li class="submenu-title"><a href="#">All pages</a></li>
-												<li><a href="shop.html">Shop</a></li>
-												<li><a href="shop-list.html">Shop-List</a></li>
-												<li><a href="single-product.html">Single Product</a></li>
-												<li><a href="cart.html">Shopping Cart</a></li>
-												<li><a href="wishlist.html">Wishlist</a></li>
-												<li><a href="checkout.html">Checkout</a></li>
-												<li><a href="login.html">Login</a></li>
-												<li><a href="my-account.html">My Account</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-Blog</a></li>
-												<li><a href="about.html">About</a></li>
-												<li><a href="404.html">404</a></li>
-												<li><a href="contact.html">Contact Us</a></li>
+												<li><a href="{% url 'shop' %}">Shop</a></li>
+												<li><a href="{% url 'login' %}">Login</a></li>
+												<li><a href="{% url 'register' %}">Register</a></li>
+												<li><a href="{% url 'about' %}">About</a></li>
+												<li><a href="{% url 'contact' %}">Contact</a></li>
+                                                <li><a href="{% url 'create_product' %}">Create Product</a></li>
 											</ul>
 										</li>
-										<li><a href="contact.html">contact</a></li>
+										<li><a href="{% url 'contact' %}">contact</a></li>
 									</ul>
 								</nav>
-							</div>
-						</div>
-						<div class="col-md-2 col-sm-6 col-xs-12">
-							<div class="total-cart">
-								<ul>
-									<li>
-										<a href="#">
-											<span class="total-cart-number">2 Item</span>
-											<span><i class="sp-shopping-bag"></i></span>
-										</a>
-										<!-- Mini-cart-content Start -->
-										<div class="total-cart-brief">
-											<div class="cart-photo-details">
-												<div class="cart-photo">
-													<a href="#"><img src="{% static 'img/total-cart/1.jpg' %}" alt="" /></a>
-												</div>
-												<div class="cart-photo-brief">
-													<a href="#">Men's Shirt Shirt</a>
-													<span>$25.00</span>
-												</div>
-												<div class="pro-delete">
-													<a href="#"><i class="sp-circle-close"></i></a>
-												</div>
-											</div>
-											<div class="cart-photo-details">
-												<div class="cart-photo">
-													<a href="#"><img src="{% static 'img/total-cart/1.jpg' %}" alt="" /></a>
-												</div>
-												<div class="cart-photo-brief">
-													<a href="#">Men's Shirt Shirt</a>
-													<span>$25.00</span>
-												</div>
-												<div class="pro-delete">
-													<a href="#"><i class="sp-circle-close"></i></a>
-												</div>
-											</div>
-											<div class="cart-subtotal">
-												<p>Total = $50.00</p>
-											</div>
-											<div class="cart-inner-btm">
-												<a href="#">Checkout</a>
-											</div>
-										</div>
-										<!-- Mini-cart-content End -->
-									</li>
-								</ul>
 							</div>
 						</div>
 					</div>
@@ -4114,41 +4016,21 @@ h1.thank-you {
 							<div class="mobile-menu">
 								<nav id="dropdown">
 									<ul>
-										<li><a href="index.html">home</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Home pages</a></li>
-												<li><a href="index.html">Homepage Version 1</a></li>
-												<li><a href="index-2.html">Homepage Version 2</a></li>
-											</ul>
-										</li>
-										<li><a href="shop.html">mens</a></li>
-										<li><a href="shop-list.html">womens</a></li>
-										<li><a href="shop.html">shop</a></li>
-										<li><a href="blog.html">blog</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Blog pages</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-blog</a></li>
-											</ul>
-										</li>
+										<li><a href="{% url 'index' %}">home</a></li>
+										<li><a href="{% url 'men' %}">mens</a></li>
+										<li><a href="{% url 'women' %}">womens</a></li>
+										<li><a href="{% url 'shop' %}">shop</a></li>
 										<li><a href="#">Pages</a>
 											<ul class="submenu">
 												<li class="submenu-title"><a href="#">All pages</a></li>
-												<li><a href="shop.html">Shop</a></li>
-												<li><a href="shop-list.html">Shop-List</a></li>
-												<li><a href="single-product.html">Single Product</a></li>
-												<li><a href="cart.html">Shopping Cart</a></li>
-												<li><a href="wishlist.html">Wishlist</a></li>
-												<li><a href="checkout.html">Checkout</a></li>
-												<li><a href="login.html">Login</a></li>
-												<li><a href="my-account.html">My Account</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-Blog</a></li>
-												<li><a href="about.html">About</a></li>
-												<li><a href="contact.html">Contact Us</a></li>
+												<li><a href="{% url 'shop' %}">Shop</a></li>
+												<li><a href="{% url 'login' %}">Login</a></li>
+												<li><a href="{% url 'register' %}">Register</a></li>
+												<li><a href="{% url 'about' %}">About</a></li>
 											</ul>
 										</li>
-										<li><a href="contact.html">contact</a></li>
+										<li><a href="{% url 'contact' %}">contact</a></li>
+                                        <li href="{% url 'create_product' %}">Create Product</li>
 									</ul>
 								</nav>
 							</div>
@@ -4377,7 +4259,7 @@ h1.thank-you {
 							<div class="col-md-4 col-sm-4 col-xs-12">
 								<div class="single-footer footer-logo">
 									<img src="{% static 'img/logo.png' %}" alt="" />
-									<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+									<p>IT City shopping part recommends to you to register to this site and buy quality clothes.</p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-4 col-xs-12">
@@ -4385,18 +4267,18 @@ h1.thank-you {
 									<h2>contact us</h2>
 									<ul>
 										<li>
-											<i class="sp-phone"></i> 
-											<span>+019 (111) 25184203</span>
+											<i class="sp-phone"></i>
+											<span>+998 97 025 10 73</span>
 										</li>
 										<li>
 											<i class="sp-email"></i>
-											<span>company@domain.com</span>
-											<span>company@email.info</span>
+											<span>ITcity@gmail.com</span>
+											<span>IT_City@email.ru</span>
 										</li>
 										<li>
-											<i class="sp-map-marker"></i> 
-											<span>777/ab Rampura Bonosri</span>
-											<span>North DC-3050 USA.</span>
+											<i class="sp-map-marker"></i>
+											<span>Karshi Uzbekistan</span>
+											<span>South of Uzbekistan</span>
 										</li>
 									</ul>
 								</div>
@@ -4406,10 +4288,8 @@ h1.thank-you {
 									<h2>company</h2>
 									<ul>
 										<li><a href="#">Account</a></li>
-										<li><a href="#">Log in</a></li>
-										<li><a href="#">Regester</a></li>
-										<li><a href="#">Shop</a></li>
-										<li><a href="#">Chakeout</a></li>
+										<li><a href="{% url 'login' %}">Log in</a></li>
+										<li><a href="{% url 'register' %}">Regester</a></li>
 									</ul>
 								</div>
 							</div>
@@ -4439,10 +4319,10 @@ h1.thank-you {
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="footer-social text-right">
-								<a href="#"><i class="sp-facebook"></i></a>
-								<a href="#"><i class="sp-twitter"></i></a>
-								<a href="#"><i class="sp-linkedin"></i></a>
-								<a href="#"><i class="sp-google"></i></a>
+								<a href="https://www.facebook.com/"><i class="sp-facebook"></i></a>
+								<a href="https://twitter.com/home"><i class="sp-twitter"></i></a>
+								<a href="https://www.linkedin.com/"><i class="sp-linkedin"></i></a>
+								<a href="https://www.google.com/"><i class="sp-google"></i></a>
 							</div>
 						</div>
 					</div>
