--- a/templates/app/women.html
+++ b/templates/app/women.html
@@ -3974,131 +3974,34 @@ h1.thank-you {
 					<div class="row">
 						<div class="col-md-2 col-sm-6 col-xs-12">
 							<div class="logo">
-								<a href="index.html"><img src="img/logo.png" alt="" /></a>
+								<a href="{% url 'index' %}"><img src="{% static 'img/logo.png' %}" alt="" /></a>
 							</div>
 						</div>
 						<div class="col-md-8 hidden-sm hidden-xs">
 							<div class="main-menu pull-right">
 								<nav>
 									<ul>
-										<li><a href="{% url 'index' %}">home</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Home pages</a></li>
-												<li><a href="{% url 'index' %}">Homepage Version 1</a></li>
-												<li><a href="{% url 'index' %}">Homepage Version 2</a></li>
-											</ul>
-										</li>
-										<li><a href="shop.html">mens</a></li>
-										<li><a href="shop-list.html">womens</a></li>
-										<li><a href="shop.html">shop</a>
-											<div class="mega-menu">
-												<span>
-													<a class="mega-menu-title" href="#">WOMEN CLOTH</a>
-													<a href="#">casual shirt</a>
-													<a href="#">rikke t-shirt</a>
-													<a href="#">mia top</a>
-													<a href="#">mia top</a>
-													<a href="#">muscle tee</a>
-													<a href="#">seine blouse</a>
-												</span>
-												<span>
-													<a class="mega-menu-title" href="#">MEN CLOTH</a>
-													<a href="#">casual shirt</a>
-													<a href="#">t-shirt</a>
-													<a href="#">t-shirt</a>
-													<a href="#">zeans</a>
-													<a href="#">trousers/ pants </a>
-													<a href="#">sweamwear</a>
-												</span>
-												<span>
-													<a class="mega-menu-title" href="#">WOMEN JEWELRY</a>
-													<a href="#">necklace</a>
-													<a href="#">samhar cuff</a>
-													<a href="#">samhar cuff</a>
-													<a href="#">samhar cuff</a>
-													<a href="#">nail set</a>
-													<a href="#">drop earrings</a>
-												</span>
-												<span class="mega-menu-photo">
-													<a href="#"><img src="{% static 'img/megamenu/1.jpg' %}" alt="" /></a>
-												</span>
-											</div>
-										</li>
-										<li><a href="blog.html">blog</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Blog pages</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-blog</a></li>
-											</ul>
-										</li><!-- 
+										<li><a href="{% url 'index' %}">home</a></li>
+										<li><a href="{% url 'men' %}">mens</a></li>
+										<li><a href="{% url 'women' %}">womens</a></li>
+										<li><a href="{% url 'shop' %}">shop</a></li>
+                                        <li><a href="{% url 'create_product' %}">Create Product</a></li>
+										<!--
 										<li><a href="about.html">about</a></li> -->
 										<li><a href="#">Pages</a>
 											<ul class="submenu">
 												<li class="submenu-title"><a href="#">All pages</a></li>
-												<li><a href="shop.html">Shop</a></li>
-												<li><a href="shop-list.html">Shop-List</a></li>
-												<li><a href="single-product.html">Single Product</a></li>
-												<li><a href="cart.html">Shopping Cart</a></li>
-												<li><a href="wishlist.html">Wishlist</a></li>
-												<li><a href="checkout.html">Checkout</a></li>
-												<li><a href="login.html">Login</a></li>
-												<li><a href="my-account.html">My Account</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-Blog</a></li>
-												<li><a href="about.html">About</a></li>
-												<li><a href="404.html">404</a></li>
-												<li><a href="contact.html">Contact Us</a></li>
+												<li><a href="{% url 'shop' %}">Shop</a></li>
+												<li><a href="{% url 'login' %}">Login</a></li>
+												<li><a href="{% url 'register' %}">Register</a></li>
+												<li><a href="{% url 'about' %}">About</a></li>
+												<li><a href="{% url 'contact' %}">Contact</a></li>
+                                                <li><a href="{% url 'create_product' %}">Create Product</a></li>
 											</ul>
 										</li>
-										<li><a href="contact.html">contact</a></li>
+										<li><a href="{% url 'contact' %}">contact</a></li>
 									</ul>
 								</nav>
-							</div>
-						</div>
-						<div class="col-md-2 col-sm-6 col-xs-12">
-							<div class="total-cart">
-								<ul>
-									<li>
-										<a href="#">
-											<span class="total-cart-number">2 Item</span>
-											<span><i class="sp-shopping-bag"></i></span>
-										</a>
-										<!-- Mini-cart-content Start -->
-										<div class="total-cart-brief">
-											<div class="cart-photo-details">
-												<div class="cart-photo">
-													<a href="#"><img src="{% static 'img/total-cart/1.jpg' %}" alt="" /></a>
-												</div>
-												<div class="cart-photo-brief">
-													<a href="#">Men's Shirt Shirt</a>
-													<span>$25.00</span>
-												</div>
-												<div class="pro-delete">
-													<a href="#"><i class="sp-circle-close"></i></a>
-												</div>
-											</div>
-											<div class="cart-photo-details">
-												<div class="cart-photo">
-													<a href="#"><img src="{% static 'img/total-cart/1.jpg' %}" alt="" /></a>
-												</div>
-												<div class="cart-photo-brief">
-													<a href="#">Men's Shirt Shirt</a>
-													<span>$25.00</span>
-												</div>
-												<div class="pro-delete">
-													<a href="#"><i class="sp-circle-close"></i></a>
-												</div>
-											</div>
-											<div class="cart-subtotal">
-												<p>Total = $50.00</p>
-											</div>
-											<div class="cart-inner-btm">
-												<a href="#">Checkout</a>
-											</div>
-										</div>
-										<!-- Mini-cart-content End -->
-									</li>
-								</ul>
 							</div>
 						</div>
 					</div>
@@ -4113,41 +4016,21 @@ h1.thank-you {
 							<div class="mobile-menu">
 								<nav id="dropdown">
 									<ul>
-										<li><a href="{% url 'index' %}">home</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Home pages</a></li>
-												<li><a href="{% url 'index' %}">Homepage Version 1</a></li>
-												<li><a href="{% url 'index' %}">Homepage Version 2</a></li>
-											</ul>
-										</li>
-										<li><a href="shop.html">mens</a></li>
-										<li><a href="shop-list.html">womens</a></li>
-										<li><a href="shop.html">shop</a></li>
-										<li><a href="blog.html">blog</a>
-											<ul class="submenu">
-												<li class="submenu-title"><a href="#">Blog pages</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-blog</a></li>
-											</ul>
-										</li>
+										<li><a href="{% url 'index' %}">home</a></li>
+										<li><a href="{% url 'men' %}">mens</a></li>
+										<li><a href="{% url 'women' %}">womens</a></li>
+										<li><a href="{% url 'shop' %}">shop</a></li>
 										<li><a href="#">Pages</a>
 											<ul class="submenu">
 												<li class="submenu-title"><a href="#">All pages</a></li>
-												<li><a href="shop.html">Shop</a></li>
-												<li><a href="shop-list.html">Shop-List</a></li>
-												<li><a href="single-product.html">Single Product</a></li>
-												<li><a href="cart.html">Shopping Cart</a></li>
-												<li><a href="wishlist.html">Wishlist</a></li>
-												<li><a href="checkout.html">Checkout</a></li>
-												<li><a href="login.html">Login</a></li>
-												<li><a href="my-account.html">My Account</a></li>
-												<li><a href="blog.html">Blog</a></li>
-												<li><a href="single-blog.html">Single-Blog</a></li>
-												<li><a href="about.html">About</a></li>
-												<li><a href="contact.html">Contact Us</a></li>
+												<li><a href="{% url 'shop' %}">Shop</a></li>
+												<li><a href="{% url 'login' %}">Login</a></li>
+												<li><a href="{% url 'register' %}">Register</a></li>
+												<li><a href="{% url 'about' %}">About</a></li>
 											</ul>
 										</li>
-										<li><a href="contact.html">contact</a></li>
+										<li><a href="{% url 'contact' %}">contact</a></li>
+                                        <li href="{% url 'create_product' %}">Create Product</li>
 									</ul>
 								</nav>
 							</div>
@@ -4162,11 +4045,14 @@ h1.thank-you {
 		<!-- PAGE-CONTENT START -->
 		<section class="page-content">
 			<!-- PAGE-BANNER START -->
-			<div class="page-banner-area margin-bottom-80">
+			<div class="page-banner-area margin-bottom-" style="height: 1px">
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<div class="page-banner-menu">
+                            <a>
+                                <img src="https://cdn.wallpapersafari.com/76/30/diFEGM.jpg">
+                            </a>
+
 								<h2 class="page-banner-title">Shop</h2>
 								<ul>
 									<li><a href="{% url 'index' %}">home</a></li>
@@ -4831,7 +4717,7 @@ h1.thank-you {
 							<div class="col-md-4 col-sm-4 col-xs-12">
 								<div class="single-footer footer-logo">
 									<img src="{% static 'img/logo.png' %}" alt="" />
-									<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+									<p>IT City shopping part recommends to you to register to this site and buy quality clothes.</p>
 								</div>
 							</div>
 							<div class="col-md-3 col-sm-4 col-xs-12">
@@ -4839,18 +4725,18 @@ h1.thank-you {
 									<h2>contact us</h2>
 									<ul>
 										<li>
-											<i class="sp-phone"></i> 
-											<span>+019 (111) 25184203</span>
+											<i class="sp-phone"></i>
+											<span>+998 97 025 10 73</span>
 										</li>
 										<li>
 											<i class="sp-email"></i>
-											<span>company@domain.com</span>
-											<span>company@email.info</span>
+											<span>ITcity@gmail.com</span>
+											<span>IT_City@email.ru</span>
 										</li>
 										<li>
-											<i class="sp-map-marker"></i> 
-											<span>777/ab Rampura Bonosri</span>
-											<span>North DC-3050 USA.</span>
+											<i class="sp-map-marker"></i>
+											<span>Karshi Uzbekistan</span>
+											<span>South of Uzbekistan</span>
 										</li>
 									</ul>
 								</div>
@@ -4860,10 +4746,8 @@ h1.thank-you {
 									<h2>company</h2>
 									<ul>
 										<li><a href="#">Account</a></li>
-										<li><a href="#">Log in</a></li>
-										<li><a href="#">Regester</a></li>
-										<li><a href="#">Shop</a></li>
-										<li><a href="#">Chakeout</a></li>
+										<li><a href="{% url 'login' %}">Log in</a></li>
+										<li><a href="{% url 'register' %}">Regester</a></li>
 									</ul>
 								</div>
 							</div>
@@ -4893,10 +4777,10 @@ h1.thank-you {
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-12">
 							<div class="footer-social text-right">
-								<a href="#"><i class="sp-facebook"></i></a>
-								<a href="#"><i class="sp-twitter"></i></a>
-								<a href="#"><i class="sp-linkedin"></i></a>
-								<a href="#"><i class="sp-google"></i></a>
+								<a href="https://www.facebook.com/"><i class="sp-facebook"></i></a>
+								<a href="https://twitter.com/home"><i class="sp-twitter"></i></a>
+								<a href="https://www.linkedin.com/"><i class="sp-linkedin"></i></a>
+								<a href="https://www.google.com/"><i class="sp-google"></i></a>
 							</div>
 						</div>
 					</div>
